--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1><b>Welcome to Accio Jobs!<b></h>
+	<h1><b>Welcome to Accio Jobs!</b></h>
     <script type="text/javascript" src="./script.js">
 </script>
 
